[project]
name = "codex-telegram-tmux-gateway"
version = "0.1.0"
description = "Local Telegram gateway for persistent Codex tmux sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "F.B. \"Rusty\" Walker, IV" }
]
keywords = ["codex", "telegram", "tmux", "cli", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/fbwalker4/codex-telegram-tmux-gateway"
Repository = "https://github.com/fbwalker4/codex-telegram-tmux-gateway"
Issues = "https://github.com/fbwalker4/codex-telegram-tmux-gateway/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
